<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, VPhoneNet!</string>
    <string name="app_name">VPhoneNet</string>
    <string name="LoginNow">Login now</string>
    <string name="ModifyPassword">Modify password</string>
    <string name="ExitDontLogin">Exit, don\'t login now</string>
    <string name="Modify">Modify</string>
    <string name="Login">Login</string>
	<string name="UserID">User Name:</string>
	<string name="vphoname">VPHO Name:</string>
	<string name="Password">Password:</string>
	<string name="ServerIP">Server IP:</string>
	<string name="ServerPort">Server Port:</string>
	<string name="GoodLack">Good lack!</string>
	<string name="Redistration">Register</string>
	<string name="actRedistration">Registration</string>
	<string name="RememberMe">Remember me</string>
	<string name="SIMcardPIN">SIM - card PIN:</string>
	<string name="fill">Please, fill the </string>
	<string name="field">field</string>
	<string name="fields">fields</string>
	<string name="wrongreg">Incorrect login and password.</string>	
	<string name="Whoareyou">Who are you?.</string>	
	<string name="Typeypi">Type your personal information</string>	
	<string name="firstName">First Name:</string>	
	<string name="lastName">Last Name:</string>	
	<string name="Birthday">Birthday:</string>	
	<string name="Gender">Gender:</string>	
	<string name="state">State:</string>
	<string name="history">History</string>
	<string name="createAnAccount">Create an Account</string>	
	<string name="typeYournai">Type your new account information</string>	
	<string name="email">E-Mail:</string>
	<string name="repeteemail">Repeat\nE-Mail:</string>	
	<string name="male">Male</string>
	<string name="female">Female</string>		
	<string name="selectsex">Select Gender</string>		
	<string name="contin">Continue</string>	
	<string name="finish">Finish</string>	
	<string name="wrongdata">Wrong data:</string>
	<string name="pleasecorrect">Please, correct.</string>		
	<string name="wrongfirstname">wrong First Name</string>
	<string name="wronglastname">wrong Last Name</string>
	<string name="wronggender">wrong Gender</string>
	<string name="cantreme">If you cannot remember your password and need help to restore it please</string>
	<string name="clickhre">click here</string>
	<string name="contoser">Connect to server...</string>
	<string name="usernotf">User not found.\nPlase register</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="error">Error</string>
	<string name="and">and</string>	
	<string name="done">Done</string>
	<string name="typeuserna">Type your User Name:</string>
	<string name="passwsend">Your password will be send to your\nE-Mail Address.</string>
	<string name="ifdificassy">If you have difficulty, then please send a support ticket and we will assist you</string>	
	<string name="confirm">Confirm:</string>
	<string name="creacc">Create account</string>
	<string name="typeacc">Type your new account information</string>
	<string name="country">Country:</string>
	<string name="phonum">Phone number:</string>
	<string name="paramit">minimum 6 characters</string>
	<string name="muststar">must starts with a letter</string>
	<string name="padoma">Passwords does not match</string>
	<string name="wfna">Wrong First Name</string>
	<string name="wrln">Wrong Last Name</string>
	<string name="wrphon">Wrong Phone Number</string>
	<string name="bemal">Bad E-mail</string>
	<string name="youphnu">Your phone number</string>
	<string name="pleyouphnu">Please, choose your country and\ntype your phone number</string>
	<string name="folerda">Following errors was detected in the registration data:\n</string>
	<string name="conletdi">contain letters, digits, and \"-\", \"_\", \".\"</string>
	<string name="whattodo">What To Do</string>
	<string name="viefupro">View Full Profile</string>
	<string name="status">Status:</string>
	<string name="statuson">Online</string>
	<string name="statusoff">Offline</string>
	<string name="statusaway">Away</string>
	<string name="voica">Voice Call</string>
	<string name="vidca">Video Call</string>
	<string name="chat">Chat</string>
	<string name="chatacti">Chat Activity</string>
	<string name="shafi">Share Files</string>
	<string name="conli">Contact List</string>
	<string name="send">Send</string>
	<string name="lisem">List is empty</string>
	<string name="accontvoi">Hello,\nplease accept me as a\ncontact so we can have a\nvoice call, video call or a\n chat</string>
</resources>
