<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:gravity="center"
  	android:layout_height="wrap_content">
	<TextView 
  		android:text="@string/createAnAccount" 
  		android:paddingTop="2px"
  		android:paddingBottom="5px"
  		android:textSize="21px"
  		android:singleLine="true"
  		android:background="#224433"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>
 	<TextView android:id="@+id/header" 
  		android:text="@string/typeYournai" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>	
	<RelativeLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:id="@+id/FirstPart"
  			android:orientation="vertical"
  			android:layout_width="fill_parent"
  			android:gravity="center"
  			android:layout_height="wrap_content">

			<LinearLayout android:id="@+id/FirstNamel" 
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:gravity="center"
  				android:layout_height="wrap_content">
				<TextView 
					android:width="80px"
					android:textSize="12px"
					android:text="@string/firstName"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:textSize="12px"
					android:id="@+id/firstName" 
					android:singleLine="true"
					android:gravity="center"
					android:layout_width="fill_parent"
					android:layout_height="32px"/>
			</LinearLayout>
			<LinearLayout android:id="@+id/LastNamel"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:width="80px"
					android:textSize="12px"
					android:text="@string/lastName"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:textSize="12px"
					android:id="@+id/lastName"
					android:singleLine="true"
					android:gravity="center"
					android:layout_width="fill_parent" 
					android:layout_height="32px"/>
			</LinearLayout>
			<LinearLayout android:id="@+id/Birthdayl" 
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:gravity="center"
  				android:layout_height="wrap_content">
				<TextView 
					android:width="80px"
					android:textSize="12px"
					android:text="@string/Birthday"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<DatePicker android:id="@+id/Birthday" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"/>	
			</LinearLayout>
			<LinearLayout android:id="@+id/genderll"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:width="80px"
					android:textSize="12px"
					android:text="@string/Gender"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>
				<Spinner android:id="@+id/Gender" 
					android:textSize="10px"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"/>
			</LinearLayout>	
			<Button 
				android:text="@string/contin" 
				android:id="@+id/contin" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"/>
		</LinearLayout>	
		<LinearLayout android:id="@+id/SecondPartl" 
  			android:orientation="vertical"
  			android:layout_width="fill_parent"
  			android:gravity="center"
  			android:layout_height="wrap_content">
			<LinearLayout android:id="@+id/loginl" 
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:gravity="center"
  				android:text="@string/selectsex"
  				android:layout_height="wrap_content">
				<TextView 
					android:width="80px"
					android:textSize="12px"
					android:text="@string/UserID"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>
				<EditText  
					android:textSize="12px"
					android:id="@+id/UserID" 
					android:singleLine="true"
					android:gravity="center"
					android:layout_width="fill_parent"
					android:layout_height="32px"/>
			</LinearLayout>
			<LinearLayout android:id="@+id/passwordl"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:width="80px"
					android:textSize="12px"
					android:text="@string/Password"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:textSize="12px"
					android:id="@+id/Password"
					android:singleLine="true"
					android:password = "true"
					android:gravity="center"
					android:layout_width="fill_parent" 
					android:layout_height="32px"/>
				</LinearLayout>
			<LinearLayout android:id="@+id/email" 
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:gravity="center"
  				android:layout_height="wrap_content">
				<TextView 
					android:width="80px"
					android:textSize="12px"
					android:text="@string/email"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:textSize="12px"
					android:id="@+id/EMail" 
					android:singleLine="true"
					android:gravity="center"
					android:layout_width="fill_parent"
					android:layout_height="32px"/>
			</LinearLayout>
			<LinearLayout android:id="@+id/prepeatemaill"
 				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:width="80px"
					android:textSize="12px"
					android:text="@string/repeteemail"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:textSize="12px"
					android:id="@+id/RepeatEMail"
					android:singleLine="true"
					android:gravity="center"
					android:layout_width="fill_parent" 
					android:layout_height="32px"/>
			</LinearLayout>
			<Button 
				android:text="@string/finish" 
				android:id="@+id/finish" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>