<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/bgreg">
	<ImageView 
   		android:id="@+id/test_image"
   		android:src="@drawable/forgotpass"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"/>
	<LinearLayout android:id="@+id/yelow1" 
  			android:orientation="vertical"
  			android:paddingTop="20dp"
  			android:paddingLeft="15dp"
 			android:paddingRight="15dp"
  			android:layout_width="fill_parent"
   			android:layout_height="wrap_content">
	<TextView 
		android:id="@+id/userid" 
		android:textColor="#000000"
		android:textSize="16dp"
		android:paddingBottom="20dp"
		android:text="@string/typeuserna"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>	
	<EditText  
		android:textSize="18dp"
		android:id="@+id/UserID" 
		android:singleLine="true"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<LinearLayout android:id="@+id/mainl" 
  		android:orientation="vertical"
 		android:paddingLeft="15dp"
 		android:paddingTop="15dp"
 		android:paddingRight="10dp"
  		android:layout_width="fill_parent"
   		android:layout_height="wrap_content">
	<Button android:text="@string/ok" 
		android:layout_gravity="left"
		android:textColor="#000000"
		android:textSize="16dp"
		android:id="@+id/OK" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<TextView 
		android:textColor="#000000"
		android:textSize="16dp"	
		android:paddingBottom="70dp"
		android:text="@string/passwsend"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>
	<TextView 
		android:textColor="#000000"
		android:textSize="16dp"
		android:text="@string/ifdificassy"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>
	</LinearLayout>
	<EditText  
		android:textSize="18dp"
		android:id="@+id/Dummy" 
		android:singleLine="true"
		android:editable="false"
		android:gravity="center"
		android:text="info@vphonet.com"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	</LinearLayout>

</LinearLayout>
