<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/bgreg">
	<ImageView 
   		android:id="@+id/test_image"
   		android:src="@drawable/registration"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"/>
 	<TextView android:id="@+id/youphnu" 
 		android:textSize="20dp"
 		android:textColor="#000000"
  		android:text="@string/youphnu" 
  		android:paddingTop="10dp"
  		android:paddingBottom="10dp"
		android:layout_width="fill_parent" 
		android:paddingLeft="40dp"
		android:layout_height="wrap_content"/>
	<TextView android:id="@+id/pleyouphnu" 
 		android:textSize="14dp"
 		android:textColor="#000000"
  		android:text="@string/pleyouphnu" 
		android:layout_width="fill_parent" 
		android:paddingBottom="10dp"
		android:paddingLeft="40dp"
		android:layout_height="wrap_content"/>
	<LinearLayout android:id="@+id/mainl" 
  		android:orientation="vertical"
 		android:paddingLeft="15dp"
 		android:paddingRight="10dp"
 		android:paddingTop="15dp"
  		android:layout_width="fill_parent"
   		android:layout_height="wrap_content">
		<LinearLayout android:id="@+id/yelow3" 
  			android:orientation="vertical"
  			android:background="@drawable/textshape"
  			android:paddingLeft="5dp"
 			android:paddingRight="5dp"
 			android:paddingBottom="10dp"
 			android:paddingTop="10dp"
  			android:layout_width="fill_parent"
   			android:layout_height="wrap_content">						
			<LinearLayout 
				android:id="@+id/countryl"
  				android:orientation="horizontal"
   				android:layout_width="fill_parent"
  				android:layout_height="40dp">	
				<TextView
					android:width="80dp"
					android:gravity="center_vertical"
					android:textSize="16dp"
					android:textColor="#000000"
					android:text="@string/country"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<Spinner
					android:id="@+id/country"
					android:paddingTop="5dp"
					android:gravity="center_vertical"
					android:layout_width="wrap_content" 
					android:singleLine="true"
					android:layout_height="fill_parent"/>
			</LinearLayout>
			<LinearLayout 
				android:id="@+id/phonumbl"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:width="80dp"
					android:gravity="center_vertical"
					android:textSize="16dp"
					android:textColor="#000000"
					android:text="@string/phonum"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:textSize="18px"
					android:id="@+id/phonumber"
					android:singleLine="true"
					android:gravity="center"
					android:layout_width="fill_parent" 
					android:layout_height="40dp"/>
			</LinearLayout>
		</LinearLayout>	
		<LinearLayout android:id="@+id/butto" 
  			android:orientation="vertical"
  			android:paddingTop="15dp"
  			android:layout_width="fill_parent"
   			android:layout_height="wrap_content">
		<Button android:text="@string/done"
			android:textColor="#222222"
			android:textSize="18px"
			android:id="@+id/done" 
			android:paddingTop="10dp"
			android:layout_width="fill_parent"
			android:layout_height="50dp"/>
	</LinearLayout>
	</LinearLayout>
</LinearLayout>

