<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background">
	<LinearLayout 
		android:id="@+id/titlelo" 
		android:orientation="horizontal"
		android:gravity="center_vertical|right"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingRight="10dp"
		android:background="@drawable/registration">
	</LinearLayout>

 	<TextView android:id="@+id/creacc" 
 		android:textSize="20dp"
 		android:textColor="#000000"
  		android:text="@string/creacc" 
		android:layout_width="fill_parent" 
		android:paddingLeft="20dp"
		android:layout_height="wrap_content"/>
	<TextView android:id="@+id/header" 
 		android:textSize="14dp"
 		android:textColor="#000000"
  		android:text="@string/typeacc" 
		android:layout_width="fill_parent" 
		android:paddingLeft="20dp"
		android:layout_height="wrap_content"/>
	<LinearLayout android:id="@+id/mainl" 
  		android:orientation="vertical"
 		android:paddingLeft="10dp"
 		android:paddingTop="10dp"
 		android:paddingRight="10dp"
  		android:layout_width="fill_parent"
   		android:layout_height="wrap_content">
		<LinearLayout android:id="@+id/yelow1" 
  			android:orientation="vertical"
  			android:paddingLeft="5dp"
 			android:paddingRight="5dp"
 			android:paddingTop="5dp"
  			android:layout_width="fill_parent"
   			android:layout_height="wrap_content">
			<LinearLayout android:id="@+id/loginl" 
			 	android:paddingLeft="5dp"
  				android:paddingRight="5dp"
  				android:paddingTop="10dp"
				android:background="@drawable/rowup"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
   				android:layout_height="wrap_content">
				<TextView 
					android:gravity="center_vertical"
					android:id="@+id/tvUserID" 
					android:width="100dp"
					android:textColor="#000000"
					android:textSize="16dp"
					android:text="@string/vphoname"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:layout_gravity="center_vertical"
					android:textSize="14dp"
					android:id="@+id/UserID" 
					android:singleLine="true"
					android:layout_width="fill_parent"
					android:layout_height="40dp"/>
			</LinearLayout>
			<LinearLayout 
				android:id="@+id/passwordl"
				android:paddingLeft="5dp"
  				android:paddingRight="5dp"
				android:background="@drawable/rowcenter"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:id="@+id/tvPassword" 
					android:width="100dp"
					android:gravity="center_vertical"
					android:textSize="16dp"
					android:textColor="#000000"
					android:text="@string/Password"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:layout_gravity="center_vertical"
					android:textSize="14px"
					android:id="@+id/Password"
					android:singleLine="true"
					android:password = "true"
					android:layout_width="fill_parent" 
					android:layout_height="40dp"/>
			</LinearLayout>
			<LinearLayout 
				android:id="@+id/confirml"
				android:paddingLeft="5dp"
  				android:paddingRight="5dp"
  				android:paddingBottom="5dp"
				android:background="@drawable/rowdown"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:id="@+id/tvConfirm" 
					android:width="100dp"
					android:gravity="center_vertical"
					android:textSize="16dp"
					android:textColor="#000000"
					android:text="@string/confirm"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:textSize="14px"
					android:id="@+id/Confirmation"
					android:singleLine="true"
					android:password = "true"
					android:layout_gravity="center_vertical"
					android:layout_width="fill_parent" 
					android:layout_height="40dp"/>
			</LinearLayout>
		</LinearLayout>	

		<LinearLayout android:id="@+id/yelow2" 
  			android:orientation="vertical"
  			android:paddingLeft="5dp"
 			android:paddingRight="5dp"
 			android:paddingTop="5dp"
  			android:layout_width="fill_parent"
   			android:layout_height="wrap_content">
			<LinearLayout 
				android:id="@+id/firstnamel"
				android:paddingLeft="5dp"
  				android:paddingRight="5dp"
  				android:paddingTop="10dp"
				android:gravity="center_vertical"
				android:background="@drawable/rowup"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:id="@+id/tvFirstName" 
					android:width="100dp"
					android:gravity="center_vertical"
					android:textSize="16dp"
					android:textColor="#000000"
					android:text="@string/firstName"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:layout_gravity="center_vertical"
					android:textSize="14px"
					android:id="@+id/firstname"
					android:singleLine="true"
					android:layout_width="fill_parent" 
					android:layout_height="40dp"/>
			</LinearLayout>
			<LinearLayout 
				android:id="@+id/lastnamel"
				android:paddingLeft="5dp"
  				android:paddingRight="5dp"
  				android:paddingTop="5dp"
				android:background="@drawable/rowcenter"
				android:gravity="center_vertical"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content">	
				<TextView
					android:id="@+id/tvLastName" 
					android:width="100dp"
					android:gravity="center_vertical"
					android:textSize="16dp"
					android:textColor="#000000"
					android:text="@string/lastName"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:gravity="center_vertical"
					android:textSize="14px"
					android:id="@+id/lastname"
					android:singleLine="true"
					android:layout_width="fill_parent" 
					android:layout_height="40dp"/>
			</LinearLayout>
			<LinearLayout 
				android:id="@+id/emaill"
				android:background="@drawable/rowdown"
  				android:orientation="horizontal"
  				android:layout_width="fill_parent"
  				android:paddingLeft="5dp"
  				android:paddingRight="5dp"
  				android:paddingBottom="5dp"
  				android:layout_height="wrap_content">	
				<TextView
					android:id="@+id/tvEmail" 
					android:width="100dp"
					android:gravity="center_vertical"
					android:textSize="16dp"
					android:textColor="#000000"
					android:text="@string/email"
					android:layout_width="wrap_content" 
					android:layout_height="fill_parent"/>	
				<EditText  
					android:gravity="center_vertical"
					android:layout_gravity="center_vertical"
					android:textSize="14dp"
					android:id="@+id/email"
					android:singleLine="true"
					android:layout_width="fill_parent" 
					android:layout_height="40dp"/>
			</LinearLayout>
		</LinearLayout>	

		<LinearLayout android:id="@+id/butto" 
  			android:orientation="vertical"
  			android:paddingTop="10dp"
  			android:layout_width="fill_parent"
   			android:layout_height="wrap_content">
			<Button android:text="@string/contin"
				android:textColor="#222222"
				android:textSize="18px"
				android:paddingTop="15dp"
				android:id="@+id/done" 
				android:layout_width="fill_parent"
				android:layout_height="50dp"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
