<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="@drawable/background">
	<LinearLayout 
		android:layout_weight="0"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical|center"
		android:padding="10dp"
		android:background="@drawable/titleyellow">
			<TextView android:id="@+id/title" 
 				android:textSize="24dp"
 				android:textColor="#000000"
 				android:textStyle="bold"
  				android:text="@string/whattodo" 
				android:layout_width="wrap_content" 
				android:layout_height="fill_parent"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_weight="5"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:paddingTop="5dp">
 		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="5dp"
			android:background="@drawable/buttonshape">
			 <FrameLayout 
				android:orientation="vertical"
				android:layout_weight="2"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:paddingLeft="1dp"
				android:paddingRight="1dp"
				android:background="@drawable/rectshape">
				<ImageView 
					android:layout_weight="1"
   					android:id="@+id/portrait"
   					android:src="@drawable/profilepicture"
   					android:scaleType="fitXY"
   					android:layout_width="fill_parent"
   					android:layout_height="fill_parent"/>
   			</FrameLayout>
   			<LinearLayout 
   			  	android:layout_weight="3"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:paddingLeft="5dp"
				android:layout_height="fill_parent">
			 	<LinearLayout 
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:padding="5dp"
					android:background="@drawable/buttonshape">	
  					<LinearLayout 
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent">					
					  	<TextView android:id="@+id/username" 
 							android:textColor="#000000"
  							android:text="Pete Smith" 
  							android:textSize="16dp"
  							android:textStyle="bold"
  							android:gravity="center_horizontal"
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content"/>
						<TextView android:id="@+id/usermail" 
						 	android:gravity="center_horizontal"
 							android:textColor="#000000"
  							android:text="peter@smith.com" 
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content"/>
					</LinearLayout>			
				</LinearLayout>
				<LinearLayout 
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">				
					<TextView android:id="@+id/staustxt" 
						android:layout_weight="10"
 						android:textColor="#000000"
  						android:text="@string/status" 
  						android:gravity="center"
						android:layout_width="wrap_content" 
						android:layout_height="fill_parent"/>				
					<ImageView 
   						android:id="@+id/status_image"
   						android:layout_weight="1"
   						android:src="@drawable/statusgreen"
   						android:layout_width="wrap_content"
   						android:layout_height="fill_parent"/>	
   					<TextView android:id="@+id/stausval" 
   						android:layout_weight="10"
 						android:textColor="#000000"
  						android:text="@string/statuson" 
  						android:gravity="center"
						android:layout_width="wrap_content" 
						android:layout_height="fill_parent"/>		
				</LinearLayout>
   			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="5"
		android:paddingRight="5dp"
		android:paddingLeft="5dp">
 		<LinearLayout 
 			android:layout_weight="1"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingRight="5dp"
			android:paddingLeft="5dp"
			android:gravity="right"
			android:background="@drawable/buttonshape">
 			<LinearLayout 
 				android:layout_weight="1"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent">
				<Button android:id="@+id/voicecall" 
					android:background="@drawable/voicecallinactive"		
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<TextView 
 					android:textSize="18dp"
 					android:textColor="#000000"
 					android:textStyle="bold"
  					android:text="@string/voica" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:paddingBottom="10dp"/>
				<Button android:id="@+id/chat" 
					android:background="@drawable/chatinactive"		
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>	
				<TextView 
 					android:textSize="18dp"
 					android:textColor="#000000"
 					android:textStyle="bold"
  					android:text="@string/chat" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"/>					
			</LinearLayout>
 			<LinearLayout 
 				android:layout_weight="1"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent">
				<Button android:id="@+id/videocall" 
					android:background="@drawable/videocallinactive"		
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<TextView 
 					android:textSize="18dp"
 					android:textColor="#000000"
 					android:textStyle="bold"
  					android:text="@string/vidca" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:paddingBottom="10dp"/>
				<Button android:id="@+id/sharefile" 
					android:background="@drawable/sharefilesinactive"		
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>	
				<TextView 
 					android:textSize="18dp"
 					android:textColor="#000000"
 					android:textStyle="bold"
  					android:text="@string/shafi" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"/>				
			</LinearLayout>						
		</LinearLayout>
	</LinearLayout>
	<LinearLayout 
		android:layout_weight="5"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="5dp"
		android:paddingRight="35dp"
		android:paddingLeft="35dp">
		<Button android:id="@+id/viefullprofile" 
			android:background="@drawable/buttonviewprofile"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"/>
  	</LinearLayout>	
</LinearLayout>



