<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:padding="1dp">
	<LinearLayout 
		android:id="@+id/titlelo" 
		android:orientation="horizontal"
		android:gravity="center_vertical|right"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingRight="10dp"
		android:background="@drawable/netlogin">
		<Button android:id="@+id/Redistration" 
			android:background="@drawable/buttonregistrate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout  
  		android:orientation="vertical"
  		android:paddingTop="20dp"
  		android:paddingBottom="20dp"
  		android:paddingLeft="10dp"
  		android:paddingRight="10dp"
  		android:layout_width="fill_parent"
   		android:layout_height="wrap_content">	
		<LinearLayout android:id="@+id/loginl" 
			android:layout_weight="1"
			android:paddingLeft="5dp"
  			android:paddingRight="5dp"
  			android:orientation="horizontal"
  			android:background="@drawable/rowup"
  			android:layout_width="fill_parent"
   			android:layout_height="wrap_content">
			<TextView 
				android:width="100dp"
				android:gravity="center_vertical"
				android:textColor="#000000"
				android:textSize="16dp"
				android:text="@string/UserID"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>	
			<EditText  
				android:textSize="18dp"
				android:id="@+id/UserID" 
				android:singleLine="true"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/passwordl"
			android:layout_weight="1"
			android:paddingLeft="5dp"
  			android:paddingRight="5dp"
  			android:orientation="horizontal"
  			android:background="@drawable/rowdown"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content">	
			<TextView
				android:width="100dp"
				android:gravity="center_vertical"
				android:textSize="16dp"
				android:textColor="#000000"
				android:text="@string/Password"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>	
			<EditText  
				android:textSize="18px"
				android:id="@+id/Password"
				android:singleLine="true"
				android:password = "true"
				android:gravity="center"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"/>
		</LinearLayout>
		</LinearLayout>
<!--  	<LinearLayout
  		android:orientation="horizontal"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
		<Button android:text="@string/Login" 
			android:layout_weight="1"
			android:textSize="16px"
			android:layout_gravity="left"
			android:id="@+id/OK" 
			android:layout_width="wrap_content" 
			android:layout_height="40dp"/>
		<Button android:text="@string/Redistration"
			android:layout_weight="1"
			android:textSize="16px"
			android:layout_gravity="right"
			android:id="@+id/Redistration" 
			android:layout_width="wrap_content" 
			android:layout_height="40dp"/>
	</LinearLayout> -->
	<Button android:text="@string/cantreme" 
		android:id="@+id/remember" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
</LinearLayout>






